# demoshop

./: README.md
demoshop-front-end/Assets/: CameraHandler.cs  Click.cs  ClickAndDrag.cs  DoubleTap.cs  Duration.cs  ExecutePathActionGoal.cs  ExecutePathFeedback.cs  GetTimeResponse.cs  JointTrajectory.cs  MultiDOFJointTrajectory.cs  MultiDOFJointTrajectoryPoint.cs  PanAndZoom.cs  RecordDemo.cs  RobotTrajectory.cs  SelectWaypoints.cs  SnapTrajectories.cs  SnapWaypoint.cs  WaypointScript.cs  closedWarningBox.prefab  confirmBox.prefab  confirmObjectBox.prefab  confirmSnapBox.prefab  trackedObject.prefab
demoshop-front-end/Assets/RosSharp/Scripts/RosBridgeClient/MessageHandling/: JointStateReader.cs
demoshop-front-end/Assets/RosSharp/Scripts/RosBridgeClient/RosCommuncation/: ActionClient.cs  JointStateSubscriber.cs  RosConnector.cs
demoshop-front-end/Assets/Scenes/: SampleScene.unity
demoshop-front-end/Assets/TV/: scene.unity
demoshop-front-end/Assets/TV/prefabs/: TVset.prefab
demoshop-front-end/Assets/Urdf/: ur5_gripper.urdf
demoshop-front-end/Assets/Urdf/Materials/: black.mat
demoshop-front-end/Assets/Urdf/icl_ur5_setup_description/meshes/: robotiq_arg2f_140_finger_tip--.prefab  robotiq_arg2f_140_inner_finger_0.asset  robotiq_arg2f_140_inner_finger_with_tip_0.asset  robotiq_arg2f_140_inner_knuckle_0.asset  robotiq_arg2f_140_outer_finger.prefab  robotiq_arg2f_base_link_coarse.prefab  robotiq_arg2f_base_link_coarse_0.asset  robotiq_fts150.prefab  robotiq_fts150_0.asset
demoshop-front-end/Assets/Urdf/ur_description/meshes/ur10/collision/: forearm.prefab  shoulder_0.asset  upperarm_0.asset  wrist2_0.asset  wrist3.prefab
demoshop-windows/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  demoshop-windows.sln
demoshop-windows/Assets/: Drag.cs  ExecutePathActionClient.cs  ExecutePathActionFeedback.cs  ExecutePathActionResult.cs  ExecutePathGoal.cs  ExecutePathResult.cs  FaceCamera.cs  Float32.cs  GetTimeRequest.cs  JointTrajectoryPoint.cs  SnapWaypoints.cs  TFMessage.cs  TouchOrbit.cs  TrackedObjectScript.cs  Waypoint.cs  WaypointTrajectories.cs  assistBox.prefab  correctObjectBox.prefab  inputIndexBox.prefab  warningBox.prefab  waypoint.prefab
demoshop-windows/Assets/Materials/: mass.mat
demoshop-windows/Assets/RosSharp/Scripts/RosBridgeClient/MessageHandling/: JointStateWriter.cs
demoshop-windows/Assets/TV/prefabs/: TVset_example.prefab
demoshop-windows/Assets/Urdf/icl_ur5_setup_description/meshes/: robotiq_arg2f_140_finger_tip--_0.asset  robotiq_arg2f_140_finger_tip.prefab  robotiq_arg2f_140_finger_tip_0.asset  robotiq_arg2f_140_inner_finger.prefab  robotiq_arg2f_140_inner_finger_with_tip.prefab  robotiq_arg2f_140_inner_knuckle.prefab  robotiq_arg2f_140_outer_finger_0.asset  robotiq_arg2f_140_outer_knuckle.prefab  robotiq_arg2f_140_outer_knuckle_0.asset  robotiq_arg2f_base_link_fine.prefab  robotiq_arg2f_base_link_fine_0.asset
demoshop-windows/ProjectSettings/: EditorBuildSettings.asset
demoshop_ubuntu/: CMakeLists.txt  package.xml
demoshop_ubuntu/action/: ExecutePath.action
demoshop_ubuntu/bundles/: cube_tags.xml  desk_tag.xml  obstacle_tags.xml  small_bigger_tags.xml  small_tags.xml
demoshop_ubuntu/camera_info/: logitech_webcam.yaml  logitech_webcam3_1080.yaml  logitech_webcam_1080_old.yaml
demoshop_ubuntu/launch/: AR_tag_viewer_bundle_cube.launch  cam.launch
demoshop_ubuntu/msg/: SnapTrajectories.msg  SnapWaypoint.msg  Waypoint.msg
demoshop_ubuntu/scripts/: plot_joints.py
demoshop_ubuntu/src/: box_frame_correction_server.cpp  robot_interface.cpp  robot_interface_sim.cpp
(+37 files in other folders)
